adjust the css bug make the product more alignment

--- a/app/views/assets/css/style.css
+++ b/app/views/assets/css/style.css
@@ -379,13 +379,26 @@ input[type="submit"]{
   margin-left: 30px;
   letter-spacing: 1%;
   line-height: 1.6;
+  transition: .5s;
 }
 .menuitem.active{
+  transition: .5s;
   border-bottom: 2px solid #000000;
 }
 .menuitem a{
   color: #000;
-
+  font-weight: 600;
+  text-decoration: none !important;
+  transition: .5s;
+}
+.menuitem:hover a{
+  color: #fff;
+}
+.menuitem:hover{
+  background: #000;
+}
+.menuitem.active:hover{
+  border-bottom: 4px solid #FFE600;
 }
 
 .favorite{
